--- a/GolfScoreCard/wwwroot/css/index.css
+++ b/GolfScoreCard/wwwroot/css/index.css
@@ -92,6 +92,7 @@
     right: 0;
     display: none;
     background-color: white;
+    font-color: black;
     border: 1px solid #ccc;
     border-top: none;
     border-radius: 0 0 8px 8px;
