--- a/GolfScoreCard/Pages/Shared/_PartialHero.cshtml
+++ b/GolfScoreCard/Pages/Shared/_PartialHero.cshtml
@@ -6,17 +6,20 @@
             <a href="/Register">Create Account</a>
         </div>
     </nav>
+
     <div class="hero-overlay">
         <div class="hero-content">
             <h1>Track Your Round.<br />Lower Your Score.</h1>
             <p>
-                Easily input scores for all golf courses in America,<br />
+                Easily input scores for any golf course in America,<br />
                 keep a record of your rounds, and view your handicap.
             </p>
-                <div class="search-wrapper">
-                    <input type="text" class="hero-search" id="courseSearch" placeholder="Search a golf course..." autocomplete="off" />
-                    <div id="dropdown" class="dropdown-list"></div>
-                </div>
+
+            <!-- SEARCH BAR + DROPDOWN -->
+            <div class="search-wrapper">
+                <input type="text" id="courseSearch" placeholder="Search a golf course..." autocomplete="off" />
+                <div id="dropdown" class="dropdown-list"></div>
+            </div>
         </div>
     </div>
 </section>
