--- a/GolfScoreCard/wwwroot/css/index.css
+++ b/GolfScoreCard/wwwroot/css/index.css
@@ -35,7 +35,7 @@
     justify-content: center;
     align-items: center;
     padding: 2rem;
-    z-index: 1;            /* sits just behind the nav */
+    z-index: 1;
 }
 
 
